2010-10-06  Stipe Tolj  <stolj at kannel.org>
    * autotools/*, gw/Makefile.in, aclocal.m4, configure, Makefile.in: new 
      configure file after bootstrapping for distribution.
      
2010-10-06  Stipe Tolj  <stolj at kannel.org>
    * */*: changing the add-on module name to OpenSMPPBox, along with all 
      references in the output and the configuration file aspects.
    
2010/09/15
    Sending negative ack upon receiving invalid MO/DLR so messages won't stay in bearerbox store.
    Patch by Victor Luchitz.

2010/08/23
    1. Respects softfail from bearerbox (ack_failed_tmp).
    2. Propagates message priority in submit_sm further to bearerbox in Msg struct.
    Thanks to Victor Luchitz for reporting.

2010/08/22
    Fixed bug reported by boooch@gmail.com as where authentication including system_type would always fail.

2010/08/19
    1) add support for message_payload TLV for deliver_sm packets. This TLV is used in case a smpp meta-flag "use_message_payload" is set.
    2) brings smppbox in conformity with SMPP v3.4 in regarding shedule_delivery_time and validiy_period fields in deliver_sm packets.
    3) if connected ESME requests delivery report for a submit_sm packet, smppbox will now also notify the ESME of SMSC failures, generated by the bearerbox.
    4) provides documentation updates.
    5) some minor improvements, including larger dict-size for acks.


2010/08/16
    Fixed ghost connections bug, where disconnected smppusers kept
    being visible as connected in bearerbox status page.

2010/08/11
    Filled in msg->sms.sms_type that was incorrectly left undefined.
    Thanks to Tomasz Konopka for reporting.

2010/08/02
    Added optional support for PAM authentication. See userguide.
    Added recognition of bearerbox acks for messages. If for
    some reason the message is acked negatively, open smppbox
    returns an error to the ESME and vice versa.
    Also an ESME-timeout can now be configured in smppbox.conf.